--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "license": "MIT",
   "scripts": {
     "start": "npm run dev",
-    "dev": "NODE_ENV=development webpack-dev-server --config build/webpack.dev.conf.js",
-    "build": "NODE_ENV=production webpack --config build/webpack.prod.conf.js"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.dev.conf.js",
+    "build": "cross-env NODE_ENV=production webpack --config build/webpack.prod.conf.js"
   },
   "repository": {
     "type": "git",
@@ -18,15 +18,19 @@
     "url": "https://github.com/xpioneer/react-typescript/issues"
   },
   "dependencies": {
-    "antd": "^3.10.4",
+    "antd": "^3.23.3",
     "axios": "^0.18.0",
+    "command": "^0.0.5",
+    "cross-env": "^6.0.0",
     "echarts": "^4.2.0-rc.2",
     "mobx": "^5.6.0",
     "mobx-react": "^5.3.6",
     "quill": "^1.3.6",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "terminal": "^0.1.4",
+    "your": "^0.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.2.0",
